--- a/helm-charts/card-api/templates/cron-job.yaml
+++ b/helm-charts/card-api/templates/cron-job.yaml
@@ -7,10 +7,10 @@ spec:
   schedule: {{.Values.app.emailBackCron}}
   jobTemplate:
     spec:
-      backoffLimit: 1
+      backoffLimit: 2
       template:
         spec:
-          restartPolicy: OnFailure
+          #restartPolicy: OnFailure
           containers:
           - name: card-cronjob
             image: python:3.6.14-alpine
