--- a/helm-charts/card-api/templates/cron-job.yaml
+++ b/helm-charts/card-api/templates/cron-job.yaml
@@ -10,7 +10,7 @@ spec:
       backoffLimit: 2
       template:
         spec:
-          #restartPolicy: OnFailure
+          restartPolicy: Never
           containers:
           - name: card-cronjob
             image: python:3.6.14-alpine
