--- a/docker/nginx/conf/mg_https.conf
+++ b/docker/nginx/conf/mg_https.conf
@@ -4,8 +4,8 @@ server {
     listen 443 ssl;
     server_name mg.meiflower.top;
     #ssl on;
-    ssl_certificate cert/cert.crt;
-    ssl_certificate_key cert/cert.key;
+    ssl_certificate cert/mg.crt;
+    ssl_certificate_key cert/mg.key;
     ssl_session_timeout 5m;
     ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
     ssl_ciphers ECDHE-RSA-AES128-GCM-SHA256:HIGH:!aNULL:!MD5:!RC4:!DHE;
@@ -14,6 +14,11 @@ server {
     location / {
         root   html;
         index  index.html index.htm;
+    }
+
+    location /config {
+        alias /usr/share/nginx/html/config;
+        try_files $uri $uri/  /index.html last;
     }
 
     location /mb/ {
