--- a/docker/nginx/conf/mg.conf
+++ b/docker/nginx/conf/mg.conf
@@ -7,9 +7,9 @@ server {
     #access_log  logs/host.access.log  main;
 
     location / {
-        #root   html;
-        #index  index.html index.htm;
-        proxy_pass http://www.meiflower.top;
+        alias /usr/share/nginx/html/home/;
+        try_files $uri $uri/  /index.html last;
+        #proxy_pass http://www.meiflower.top;
     }
     location /cp/ {
         alias /usr/share/nginx/html/cp/;
