--- a/docker/nginx/conf/mg_https.conf
+++ b/docker/nginx/conf/mg_https.conf
@@ -12,8 +12,8 @@ server {
     ssl_prefer_server_ciphers on;
 
     location / {
-        root   html;
-        index  index.html index.htm;
+        proxy_pass http://worksum.meiflower.top;
+        add_header Access-Control-Allow-Origin *;
     }
 
     location /config {
