--- a/docker/nginx/conf/deepstudy_https.conf
+++ b/docker/nginx/conf/deepstudy_https.conf
@@ -4,21 +4,20 @@ server {
     listen 443 ssl;
     server_name www.meiflower.top;
     #ssl on;
-    ssl_certificate cert/deepstudy.crt;
-    ssl_certificate_key cert/deepstudy.key;
+    ssl_certificate cert/www.crt;
+    ssl_certificate_key cert/www.key;
     ssl_session_timeout 5m;
     ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
     ssl_ciphers ECDHE-RSA-AES128-GCM-SHA256:HIGH:!aNULL:!MD5:!RC4:!DHE;
     ssl_prefer_server_ciphers on;
 
     location / {
-        proxy_pass http://doc.meiflower.top;
-        add_header Access-Control-Allow-Origin *;
+        alias /usr/share/nginx/html/home/;
+        try_files $uri $uri/  /index.html last;
     }
 
-    location /worksum/ {
-        proxy_pass http://worksum.meiflower.top;
-        add_header Access-Control-Allow-Origin *;
+    location /plan/ {
+        proxy_pass https://mgang.gitee.io/plan/;
     }
 
     error_page   500 502 503 504  /50x.html;
