--- a/docker/nginx/conf/disk.conf
+++ b/docker/nginx/conf/disk.conf
@@ -6,14 +6,9 @@ server {
 
     #access_log  logs/host.access.log  main;
 
-    #location / {
-    #    proxy_pass http://172.81.247.96:8080;
-    #    add_header Access-Control-Allow-Origin *;
-    #}
     location / {
-        alias /usr/share/nginx/html/home/;
-        try_files $uri $uri/  /index.html last;
-        #proxy_pass http://www.meiflower.top;
+        proxy_pass http://172.81.247.96:8080;
+        add_header Access-Control-Allow-Origin *;
     }
 
 }
