--- a/helm-charts/es-server/templates/statefulset.yaml
+++ b/helm-charts/es-server/templates/statefulset.yaml
@@ -1,4 +1,3 @@
-# es-statefulset.yml
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
@@ -7,8 +6,8 @@ metadata:
   labels:
     app: {{.Values.app.name}}
 spec:
-  replicas: {{.Values.app.replicas}}
   serviceName: {{.Values.app.name}}
+  replicas: {{.Values.app.replicas}}
   selector:
     matchLabels:
       app: {{.Values.app.name}}
@@ -20,27 +19,27 @@ spec:
       containers:
         - name: {{.Values.app.name}}
           image: {{.Values.app.image}}
+          imagePullPolicy: IfNotPresent
           env:
-            - name: NAMESPACE
-              valueFrom:
-                fieldRef:
-                  fieldPath: metadata.namespace
-            - name: POD_NAME
-              valueFrom:
-                fieldRef:
-                  fieldPath: metadata.name
-          resources:
-            requests:
-              memory: "1024Mi"
-              cpu: "200m"
-            limits:
-              memory: "1024Mi"
-              cpu: "500m"
+            - name: discovery.type
+              value: single-node
+            - name: http.cors.enabled
+              value: "true"
+            - name: http.cors.allow-origin
+              value: "*"
+          ports:
+            - containerPort: {{.Values.app.targetPort}}
           volumeMounts:
-            - name: es-config
-              mountPath: /usr/share/elasticsearch/config/elasticsearch.yml
-              subPath: elasticsearch.yml
+            - name: es-v
+              mountPath: /tmp/data
+#          resources:
+#            requests:
+#              memory: "100Mi"
+#              cpu: "200m"
+#            limits:
+#              memory: "300Mi"
+#              cpu: "500m"
       volumes:
-        - name: es-config
-          configMap:
-            name: es-config
+        - name: es-v
+          persistentVolumeClaim:
+            claimName: es-pvc
