nginx-plan包，修改docker nginx配置

--- a/docker/nginx/conf/www_https.conf
+++ b/docker/nginx/conf/www_https.conf
@@ -17,7 +17,7 @@ server {
     }
 
     location /plan/ {
-        proxy_pass https://mgang.gitee.io/plan/;
+        proxy_pass https://mg.meiflower.top/plan/;
     }
 
     error_page   500 502 503 504  /50x.html;
