--- a/docker/nginx/conf/mg.conf
+++ b/docker/nginx/conf/mg.conf
@@ -15,6 +15,18 @@ server {
         alias /usr/share/nginx/html/cp/;
         try_files $uri $uri/  /index.html last;
     }
+
+    location /res/ {
+        alias /usr/share/nginx/html/public/;
+    }
+
+    location /plan/ {
+        #auth_basic "please auth";
+        #auth_basic_user_file /etc/nginx/admin.passwd;
+        alias /usr/share/nginx/html/plan/;
+        try_files $uri $uri/  /index.html last;
+    }
+
     location /mb/ {
         proxy_pass 'https://mgang.gitee.io/mb/';
     }
@@ -32,11 +44,11 @@ server {
     location /mango-kit/ {
         proxy_pass https://mgang.gitee.io/mango-kit/;
     }
-    location /plan/ {
-        auth_basic "please auth";
-        auth_basic_user_file /etc/nginx/admin.passwd;
-        proxy_pass https://mgang.gitee.io/plan/;
-    }
+    #location /plan/ {
+    #    auth_basic "please auth";
+    #    auth_basic_user_file /etc/nginx/admin.passwd;
+    #    proxy_pass https://mg.meiflower.top:30980/plan/;
+    #}
     location /workstay/ {
         auth_basic "please auth";
         auth_basic_user_file /etc/nginx/admin.passwd;
