--- a/docker/nginx/conf/mg.conf
+++ b/docker/nginx/conf/mg.conf
@@ -33,10 +33,10 @@ server {
     location /api/ {
         proxy_pass http://docker.meiflower.top:30002/;
     }
-    location /mb/sickday.html {
+    location /mb/post/me/sickday/ {
         auth_basic "please auth";
         auth_basic_user_file /etc/nginx/admin.passwd;
-        proxy_pass https://mgang.gitee.io/mb/sickday.html;
+        proxy_pass https://mgang.gitee.io/mb/post/me/sickday/;
     }
     location /mr/ {
         proxy_pass https://mgang.gitee.io/mr/;
