--- a/docker/nginx/conf/mg_https.conf
+++ b/docker/nginx/conf/mg_https.conf
@@ -11,10 +11,10 @@ server {
     ssl_ciphers ECDHE-RSA-AES128-GCM-SHA256:HIGH:!aNULL:!MD5:!RC4:!DHE;
     ssl_prefer_server_ciphers on;
 
-    location / {
-        proxy_pass http://worksum.meiflower.top;
-        add_header Access-Control-Allow-Origin *;
-    }
+    #location / {
+    #    proxy_pass http://worksum.meiflower.top;
+    #    add_header Access-Control-Allow-Origin *;
+    #}
 
     location /config {
         alias /usr/share/nginx/html/config;
