添加home-docsify，打包docker，通过helm部署到k8s

--- a/docker/nginx/conf/mg.conf
+++ b/docker/nginx/conf/mg.conf
@@ -6,10 +6,11 @@ server {
 
     #access_log  logs/host.access.log  main;
 
+
     location / {
-        alias /usr/share/nginx/html/home/;
-        try_files $uri $uri/  /index.html last;
-        #proxy_pass http://www.meiflower.top;
+        #alias /usr/share/nginx/html/home/;
+        #try_files $uri $uri/  /index.html last;
+        proxy_pass http://1.117.210.112:30300/;
     }
     location /cp/ {
         alias /usr/share/nginx/html/cp/;
