--- a/docker/nginx/conf/mg.conf
+++ b/docker/nginx/conf/mg.conf
@@ -31,8 +31,15 @@ server {
     location /mb/ {
         proxy_pass 'https://mgang.gitee.io/mb/';
     }
+    location /card {
+        proxy_pass http://mg.meiflower.top:30901/card;
+    }
+    location /card-admin/ {
+        proxy_pass http://node.meiflower.top:30180/card-admin/;
+    }
     location /api/ {
-        proxy_pass http://docker.meiflower.top:30002/;
+        proxy_pass https://mg.meiflower.top/card/;
+        # proxy_set_header Host $http_host;
     }
     location /mb/post/me/sickday/ {
         auth_basic "please auth";
