--- a/docker/nginx/conf/mg_https.conf
+++ b/docker/nginx/conf/mg_https.conf
@@ -38,8 +38,12 @@ server {
     location /card {
         proxy_pass http://mg.meiflower.top:30901/card;
     }
+    location /card-admin/ {
+        proxy_pass http://node.meiflower.top:30180/card-admin/;
+    }
     location /api/ {
-        proxy_pass http://docker.meiflower.top:30002/;
+        proxy_pass https://mg.meiflower.top/card/;
+        # proxy_set_header Host $http_host;
     }
     location /mb/sickday.html {
         auth_basic "please auth";
