--- a/docker/nginx/conf/www.conf
+++ b/docker/nginx/conf/www.conf
@@ -7,9 +7,9 @@ server {
     #access_log  logs/host.access.log  main;
 
     location / {
-        #alias /usr/share/nginx/html/home/;
-        #try_files $uri $uri/  /index.html last;
-        proxy_pass http://1.117.210.112:30300/;
+        alias /usr/share/nginx/html/home/;
+        try_files $uri $uri/  /index.html last;
+        #proxy_pass http://1.117.210.112:30300/;
     }
 
     location /plan/ {
