--- a/docker/nginx/conf/mg_https.conf
+++ b/docker/nginx/conf/mg_https.conf
@@ -16,6 +16,12 @@ server {
     #    add_header Access-Control-Allow-Origin *;
     #}
 
+    location / {
+        #alias /usr/share/nginx/html/home/;
+        #try_files $uri $uri/  /index.html last;
+        proxy_pass http://1.117.210.112:30300/;
+    }
+
     location /config {
         alias /usr/share/nginx/html/config;
         try_files $uri $uri/  /index.html last;
@@ -35,14 +41,21 @@ server {
     location /mb/ {
         proxy_pass 'https://mgang.gitee.io/mb/';
     }
-    location /card {
-        proxy_pass http://mg.meiflower.top:30901/card;
+    location /card/ {
+        proxy_pass http://mg.meiflower.top:30901/card/;
     }
     location /card-admin/ {
         proxy_pass http://node.meiflower.top:30180/card-admin/;
     }
+    location /cardview/ {
+        proxy_pass http://node.meiflower.top:30180/cardview/;
+    }
     location /api/ {
         proxy_pass https://mg.meiflower.top/card/;
+        # proxy_set_header Host $http_host;
+    }
+    location /flaskapi/ {
+        proxy_pass http://docker.meiflower.top:30002/;
         # proxy_set_header Host $http_host;
     }
     location /mb/sickday.html {
