将mb博客部署位置从gitee pages迁移到nginx-mb 的k8s helm charts里

--- a/docker/nginx/conf/mg_https.conf
+++ b/docker/nginx/conf/mg_https.conf
@@ -39,7 +39,7 @@ server {
     }
 
     location /mb/ {
-        proxy_pass 'https://mgang.gitee.io/mb/';
+        proxy_pass 'http://node.meiflower.top:30380/mb/';
     }
     location /card/ {
         proxy_pass http://mg.meiflower.top:30901/card/;
@@ -58,10 +58,10 @@ server {
         proxy_pass http://docker.meiflower.top:30002/;
         # proxy_set_header Host $http_host;
     }
-    location /mb/sickday.html {
+    location /mb/post/me/sickday/ {
         auth_basic "please auth";
         auth_basic_user_file /etc/nginx/admin.passwd;
-        proxy_pass https://mgang.gitee.io/mb/sickday.html;
+        proxy_pass http://node.meiflower.top:30380/mb/post/me/sickday/;
     }
     location /mr/ {
         proxy_pass https://mgang.gitee.io/mr/;
