--- a/docker/nginx/conf/mg.conf
+++ b/docker/nginx/conf/mg.conf
@@ -29,7 +29,7 @@ server {
     }
 
     location /mb/ {
-        proxy_pass 'https://mgang.gitee.io/mb/';
+        proxy_pass 'http://node.meiflower.top:30380/mb/';
     }
     location /card/ {
         proxy_pass http://mg.meiflower.top:30901/card/;
@@ -51,7 +51,7 @@ server {
     location /mb/post/me/sickday/ {
         auth_basic "please auth";
         auth_basic_user_file /etc/nginx/admin.passwd;
-        proxy_pass https://mgang.gitee.io/mb/post/me/sickday/;
+        proxy_pass 'http://node.meiflower.top:30380/mb/post/me/sickday/';
     }
     location /mr/ {
         proxy_pass https://mgang.gitee.io/mr/;
