--- a/helm-charts/nginx-mb/docker/conf/node.conf
+++ b/helm-charts/nginx-mb/docker/conf/node.conf
@@ -1,6 +1,6 @@
 server {
     listen       80;
-    server_name  node.meiflower.top;
+    server_name  hw.meiflower.top;
 
     #charset koi8-r;
 
@@ -9,21 +9,21 @@ server {
     location /mb/ {
         #auth_basic "please auth";
         #auth_basic_user_file /etc/nginx/admin.passwd;
-        alias /data/mb/;
+        alias /data/mb/mb/;
         try_files $uri $uri/  /index.html last;
     }
 
     location /mb/images/ {
         #auth_basic "please auth";
         #auth_basic_user_file /etc/nginx/admin.passwd;
-        alias /data/images/;
+        alias /data/mb/images/;
         try_files $uri $uri/  /index.html last;
     }
 
     location /mb/img/ {
         #auth_basic "please auth";
         #auth_basic_user_file /etc/nginx/admin.passwd;
-        alias /data/img/;
+        alias /data/mb/img/;
         try_files $uri $uri/  /index.html last;
     }
 
