--- a/docker/nginx/conf/mg_https.conf
+++ b/docker/nginx/conf/mg_https.conf
@@ -43,7 +43,7 @@ server {
         proxy_pass 'http://hw.meiflower.top:30380/mb/';
     }
     location /card/ {
-        proxy_pass http://mg.meiflower.top:30901/card/;
+        proxy_pass http://hw.meiflower.top:30901/card/;
     }
     location /card-admin/ {
         proxy_pass http://node.meiflower.top:30180/card-admin/;
