完成服务迁移

--- a/docker/nginx/conf/mg_https.conf
+++ b/docker/nginx/conf/mg_https.conf
@@ -46,17 +46,17 @@ server {
         proxy_pass http://hw.meiflower.top:30901/card/;
     }
     location /card-admin/ {
-        proxy_pass http://node.meiflower.top:30180/card-admin/;
+        proxy_pass http://hw.meiflower.top:30180/card-admin/;
     }
     location /cardview/ {
-        proxy_pass http://node.meiflower.top:30180/cardview/;
+        proxy_pass http://hw.meiflower.top:30180/cardview/;
     }
     location /api/ {
-        proxy_pass https://mg.meiflower.top/card/;
+        proxy_pass http://hw.meiflower.top:30704/;
         # proxy_set_header Host $http_host;
     }
     location /flaskapi/ {
-        proxy_pass http://docker.meiflower.top:30002/;
+        proxy_pass http://hw.meiflower.top:30704/;
         # proxy_set_header Host $http_host;
     }
     location /mb/post/me/sickday/ {
