--- a/docker-compose/mango-kiftd/docker-compose.yml
+++ b/docker-compose/mango-kiftd/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.1'
 
 services:
   kiftd:
-    image: swr.cn-south-1.myhuaweicloud.com/mangoorg/kiftd:1.0.35
+    image: swr.cn-south-1.myhuaweicloud.com/mangoorg/kiftd:1.0.35-bugfix
     restart: always
     ports:
       - 30480:8080
