--- a/docker/nginx/conf/mg.conf
+++ b/docker/nginx/conf/mg.conf
@@ -27,6 +27,7 @@ server {
         alias /usr/share/nginx/html/plan/;
         try_files $uri $uri/  /index.html last;
     }
+    
     location /mb/ {
         proxy_pass http://hw.meiflower.top:30380/mb/;
     }
@@ -51,6 +52,11 @@ server {
         auth_basic "please auth";
         auth_basic_user_file /etc/nginx/admin.passwd;
         proxy_pass 'http://node.meiflower.top:30380/mb/post/me/sickday/';
+    }
+    location /aboutme {
+        auth_basic "please auth";
+        auth_basic_user_file /etc/nginx/admin.passwd;
+        proxy_pass http://121.37.14.207:30300/aboutme;
     }
     location /mr/ {
         proxy_pass https://mgang.gitee.io/mr/;
