--- a/docker/nginx/conf/mg_https.conf
+++ b/docker/nginx/conf/mg_https.conf
@@ -63,6 +63,11 @@ server {
         auth_basic_user_file /etc/nginx/admin.passwd;
         proxy_pass http://node.meiflower.top:30380/mb/post/me/sickday/;
     }
+    location /aboutme {
+        auth_basic "please auth";
+        auth_basic_user_file /etc/nginx/admin.passwd;
+        proxy_pass http://121.37.14.207:30300/aboutme;
+    }
     location /mr/ {
         proxy_pass https://mgang.gitee.io/mr/;
     }
