--- a/docker/nginx/conf/mg_https.conf
+++ b/docker/nginx/conf/mg_https.conf
@@ -3,7 +3,7 @@
 server {
     listen 443 ssl;
     server_name mg.meiflower.top;
-    #ssl on;
+    ssl on;
     ssl_certificate cert/mg.cer;
     ssl_certificate_key cert/mg.key;
     ssl_session_timeout 5m;
