--- a/docker/nginx/conf/www_https.conf
+++ b/docker/nginx/conf/www_https.conf
@@ -3,26 +3,17 @@
 server {
     listen 443 ssl;
     server_name www.meiflower.top;
-    #ssl on;
-    ssl_certificate cert/www.crt;
+    ssl on;
+    ssl_certificate cert/www.cer;
     ssl_certificate_key cert/www.key;
     ssl_session_timeout 5m;
     ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
     ssl_ciphers ECDHE-RSA-AES128-GCM-SHA256:HIGH:!aNULL:!MD5:!RC4:!DHE;
     ssl_prefer_server_ciphers on;
 
-    location / {
+     location / {
         alias /usr/share/nginx/html/home/;
         try_files $uri $uri/  /index.html last;
         #proxy_pass http://1.117.210.112:30300/;
-    }
-
-    location /plan/ {
-        proxy_pass https://mg.meiflower.top/plan/;
-    }
-
-    error_page   500 502 503 504  /50x.html;
-        location = /50x.html {
-        root   html;
     }
 }
