personal 个人目录auth调整

--- a/docker/nginx/conf/mg_https.conf
+++ b/docker/nginx/conf/mg_https.conf
@@ -61,12 +61,12 @@ server {
     location /mb/post/me/sickday/ {
         auth_basic "please auth";
         auth_basic_user_file /etc/nginx/admin.passwd;
-        proxy_pass http://node.meiflower.top:30380/mb/post/me/sickday/;
+        proxy_pass http://hw.meiflower.top:30380/mb/post/me/sickday/;
     }
-    location /aboutme {
+    location /personal/ {
         auth_basic "please auth";
         auth_basic_user_file /etc/nginx/admin.passwd;
-        proxy_pass http://121.37.14.207:30300/aboutme;
+        proxy_pass http://121.37.14.207:30300/personal/;
     }
     location /mr/ {
         proxy_pass https://mgang.gitee.io/mr/;
