--- a/docker/nginx/conf/mg.conf
+++ b/docker/nginx/conf/mg.conf
@@ -22,8 +22,8 @@ server {
     }
 
     location /plan/ {
-        #auth_basic "please auth";
-        #auth_basic_user_file /etc/nginx/admin.passwd;
+        auth_basic "please auth";
+        auth_basic_user_file /etc/nginx/admin.passwd;
         alias /usr/share/nginx/html/plan/;
         try_files $uri $uri/  /index.html last;
     }
