--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,4 @@
-home-docsify/.history/world/threebody_20221213170254.md
+home-docsify/.history
+.history
+bup/compontent/__pycache__/
+bup/compontent/cmd/__pycache__/
