--- a/docker/nginx/conf/mg_https.conf
+++ b/docker/nginx/conf/mg_https.conf
@@ -38,6 +38,11 @@ server {
         alias /usr/share/nginx/html/plan/;
         try_files $uri $uri/  /index.html last;
     }
+
+    location /oss/ {
+        proxy_pass http://qn.meiflower.top/;
+    }
+
     location /mb/ {
         proxy_pass http://hw.meiflower.top:30380/mb/;
     }
